opam-version: "1.2"
maintainer: "Jean-Noel Avila <jn.avila@free.fr>"
author: "Jean-Noel Avila <jn.avila@free.fr>"
homepage: "https://jnavila.github.io/plotkicadsch/"
bug-reports: "https://github.com/jnavila/plotkicadsch/issues"
license: "ISC"
dev-repo: "https://github.com/jnavila/plotkicadsch.git"
build: [
  [ "jbuilder" "subst" ] {pinned}
  [ "jbuilder" "build" "-p" name "-j" jobs ]
]
build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]
depends: [
  "jbuilder" {build}
  "ounit" {test}
  "pcre"
  "tyxml" {>= "4.0.0"}
  "base64"
]
available: [ ocaml-version >= "4.03" ]
