opam-version: "2.0"
maintainer: "Jean-Noel Avila <jn.avila@free.fr>"
authors: "Jean-Noel Avila <jn.avila@free.fr>"
homepage: "https://jnavila.github.io/plotkicadsch/"
doc: "https://jnavila.github.io/plotkicadsch/index"
synopsis: "Library to read and convert Kicad Sch files"
description: """
Library able to read Kicad libraries and sch file and
drive a painter to paint the schematics.
"""
bug-reports: "https://github.com/jnavila/plotkicadsch/issues"
license: "ISC"
dev-repo: "git+https://github.com/jnavila/plotkicadsch.git"
build: [
  [ "dune" "subst" ] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "dune" {>= "1.0"}
  "ounit" {with-test}
  "ocaml" {>="4.07"}
]
