opam-version: "1.2"
maintainer: "Jean-Noel Avila <jn.avila@free.fr>"
author: "Jean-Noel Avila <jn.avila@free.fr>"
homepage: "https://jnavila.github.io/plotkicadsch/"
bug-reports: "https://github.com/jnavila/plotkicadsch/issues"
doc: "https://jnavila.github.io/plotkicadsch/index"
synopsis: "Utilities to print and compare version of kicad schematics"
license: "ISC"
dev-repo: "https://github.com/jnavila/plotkicadsch.git"
build: [
  [ "dune" "subst" ] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
]
depends: [
  "dune" {build}
  "dune-release" {build}
  "kicadsch" {= "0.3.0"}
  "tyxml" {>= "4.0.0"}
  "lwt"
  "lwt_ppx" {build}
  "sha"
  "git" {< "2.0.0"}
  "git-unix"
  "base64"
  "patience_diff" { >= "v0.10.0" }
  "core_kernel"
  "cmdliner"
]
