opam-version: "2.0"
maintainer: "Jean-Noel Avila <jn.avila@free.fr>"
authors: "Jean-Noel Avila <jn.avila@free.fr>"
homepage: "https://jnavila.github.io/plotkicadsch/"
bug-reports: "https://github.com/jnavila/plotkicadsch/issues"
doc: "https://jnavila.github.io/plotkicadsch/index"
synopsis: "Utilities to print and compare version of Kicad schematics"
description: """
Two utilities:
 * plotkicadsch is able to plot schematic sheets to SVG files
 * plotgitsch is able to compare git revisions of schematics
"""
license: "ISC"
dev-repo: "git+https://github.com/jnavila/plotkicadsch.git"
build: [
  [ "dune" "subst" ] {pinned}
  [ "dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>="4.09"}
  "dune" {>= "1.0"}
  "kicadsch" {= version}
  "tyxml" {>= "4.0.0"}
  "lwt"
  "lwt_ppx" {build}
  "sha"
  "git" {>= "3.0.0"}
  "git-unix"
  "base64" {>= "3.0.0"}
  "cmdliner"
]
