(library
   (preprocess (pps ppx_deriving.show ppx_deriving.ord))
   (name kicadsch)
   (public_name kicadsch)
   (modules_without_implementation kicadSch_sigs kicadDefs)
   (synopsis "Library to plotting KiCAD schematics")
   (libraries
    angstrom
    uuidm
    sexp_decode
    parsexp
    base64
    )
   (flags (:standard -w -3 -safe-string))
  )
